Modified the text fonts

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-      rel="stylesheet"
-    />
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 
     <title>Frontend Mentor | Bento grid</title>
 
@@ -38,7 +35,7 @@
         <div class="grid-item item2">
           <h1 class="heading">
             Social Media <span class="span-item2"> 10x </span> <br>
-            <span>Faster with AI
+            <span class="span-item3">Faster</span> with AI
           </h1>
           <div class="image-container">
             <img src="assets/images/illustration-five-stars.webp" alt="" />
